Traefik/nginx-expose/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  namespace: default
  annotations:
spec:
  ingressClassName: traefik
  rules:
    - host: app02.sananetco.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-demo
                port:
                  number: 80
